--- a/match.html
+++ b/match.html
@@ -10,6 +10,18 @@
 
     <title>Usability Evaluation</title>
 
+    <!-- Imports for shadowbox -->
+    <link rel="stylesheet" type="text/css" href="/shadowbox-3.0.3/shadowbox.css">
+    <script type="text/javascript" src="/shadowbox-3.0.3/shadowbox.js"></script>
+    <script type="text/javascript">
+    Shadowbox.init({
+        handleOversize: "resize",
+        modal: true
+    });
+    </script>
+    <!-- CSS for match --> 
+    <link href="css/main_match.css" rel="stylesheet">
+      
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/support.css" rel="stylesheet">
@@ -53,36 +65,25 @@
         <div class="col-sm-8 blog-main">
 
           <div class="blog-post">
-            <h2 class="blog-post-title">Sample blog post</h2>
-            <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
-
-            <p>This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
-            <hr>
-            <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
-            <blockquote>
-              <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            </blockquote>
-            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-            <h2>Heading</h2>
-            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-            <h3>Sub-heading</h3>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-            <pre><code>Example code block</code></pre>
-            <p>Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-            <h3>Sub-heading</h3>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <ul>
-              <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
-              <li>Donec id elit non mi porta gravida at eget metus.</li>
-              <li>Nulla vitae elit libero, a pharetra augue.</li>
-            </ul>
-            <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
-            <ol>
-              <li>Vestibulum id ligula porta felis euismod semper.</li>
-              <li>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</li>
-              <li>Maecenas sed diam eget risus varius blandit sit amet non magna.</li>
-            </ol>
-            <p>Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis.</p>
+              <div class="container-fluid">
+                  <div class="col-sm-6">
+                      <p>The text chosen feel natural and straightforward. The designers did a good job at synthesizing FAQs in few-word expressions.
+                      </p>
+                  </div>
+                  <a href="/screenshots/match_faqs.png" rel="shadowbox">
+                      <div class="col-sm-6" ><img src="screenshots/match_faqs.png" class="image_match"/></div>                   
+                  </a>
+              </div>
+              <hr>
+              <div class="container-fluid">
+                    <div class="col-sm-6">
+                        <p>There are some awkward formulations though. For instance the section :”What’s happening” should be renamed “Events”.
+                        </p>
+                    </div>
+                  <a href="/screenshots/match_whats_happening.png" rel="shadowbox">
+                      <div class="col-sm-6"><img src="screenshots/match_whats_happening.png" class="image_match"/></div>                   
+                  </a>
+              </div>
           </div><!-- /.blog-post -->
 
 
