changed layout for consistency added ./ everywhere

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <title>test</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/support.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/support.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="blog.css" rel="stylesheet">
+    <link href="./blog.css" rel="stylesheet">
 
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
 
@@ -32,8 +32,8 @@
 <div class="navigation">
       <div class="container-fluid">
         <nav class="blog-nav">
-          <a class="blog-nav-item active" href="index.html">Home</a>
-          <a class="blog-nav-item" href="visibility.html">Heuristics</a>
+          <a class="blog-nav-item active" href="./index.html">Home</a>
+          <a class="blog-nav-item" href="./visibility.html">Heuristics</a>
           <a class="blog-nav-item" href="#">Contact</a>
           <a class="blog-nav-item" href="#">Closing</a>
         </nav>
@@ -89,7 +89,7 @@
           <nav>
             <ul class="pager">
               
-              <li><a href="visibility.html">Next</a></li>
+              <li><a href="./visibility.html">Next</a></li>
             </ul>
           </nav>
 
@@ -100,16 +100,16 @@
           <div class="sidebar-module">
             <h4>Heuristics</h4>
             <ol class="list-unstyled">
-              <li><a href="visibility.html">Visibility of system status</a></li>
-              <li><a href="match.html">Match between system and world</a></li>
-              <li><a href="usercontrol.html">User control freedom</a></li>
-              <li><a href="consistency.html">Consistency and standards</a></li>
-              <li><a href="errorprevention.html">Error Prevention</a></li>
-              <li><a href="recognition.html">Recognition rather than recall</a></li>
-              <li><a href="flexibility.html">Flexibility and efficiency of use</a></li>
-              <li><a href="aesthetic.html">Aesthetic and minimalistic design</a></li>
-              <li><a href="errorrecovery.html">Error recovery</a></li>
-              <li><a href="help.html">Help and documentation</a></li>
+              <li><a href="./visibility.html">Visibility of system status</a></li>
+              <li><a href="./match.html">Match between system and world</a></li>
+              <li><a href="./usercontrol.html">User control freedom</a></li>
+              <li><a href="./consistency.html">Consistency and standards</a></li>
+              <li><a href="./errorprevention.html">Error Prevention</a></li>
+              <li><a href="./recognition.html">Recognition rather than recall</a></li>
+              <li><a href="./flexibility.html">Flexibility and efficiency of use</a></li>
+              <li><a href="./aesthetic.html">Aesthetic and minimalistic design</a></li>
+              <li><a href="./errorrecovery.html">Error recovery</a></li>
+              <li><a href="./help.html">Help and documentation</a></li>
             </ol>
           </div>
           
