--- a/match.html
+++ b/match.html
@@ -11,8 +11,8 @@
     <title>Usability Evaluation</title>
 
     <!-- Imports for shadowbox -->
-    <link rel="stylesheet" type="text/css" href="/shadowbox-3.0.3/shadowbox.css">
-    <script type="text/javascript" src="/shadowbox-3.0.3/shadowbox.js"></script>
+    <link rel="stylesheet" type="text/css" href="./shadowbox-3.0.3/shadowbox.css">
+    <script type="text/javascript" src="./shadowbox-3.0.3/shadowbox.js"></script>
     <script type="text/javascript">
     Shadowbox.init({
         handleOversize: "resize",
@@ -20,14 +20,14 @@
     });
     </script>
     <!-- CSS for match --> 
-    <link href="css/main_match.css" rel="stylesheet">
+    <link href="./css/main_match.css" rel="stylesheet">
       
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/support.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/support.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="blog.css" rel="stylesheet">
+    <link href="./blog.css" rel="stylesheet">
 
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
 
@@ -70,8 +70,8 @@
                       <p>The text chosen feel natural and straightforward. The designers did a good job at synthesizing FAQs in few-word expressions.
                       </p>
                   </div>
-                  <a href="/screenshots/match_faqs.png" rel="shadowbox">
-                      <div class="col-sm-6" ><img src="screenshots/match_faqs.png" class="image_match"/></div>                   
+                  <a href="./screenshots/match_faqs.png" rel="shadowbox">
+                      <div class="col-sm-6" ><img src="./screenshots/match_faqs.png" class="image_match"/></div>                   
                   </a>
               </div>
               <hr>
@@ -80,8 +80,8 @@
                         <p>There are some awkward formulations though. For instance the section :”What’s happening” should be renamed “Events”.
                         </p>
                     </div>
-                  <a href="/screenshots/match_whats_happening.png" rel="shadowbox">
-                      <div class="col-sm-6"><img src="screenshots/match_whats_happening.png" class="image_match"/></div>                   
+                  <a href="./screenshots/match_whats_happening.png" rel="shadowbox">
+                      <div class="col-sm-6"><img src="./screenshots/match_whats_happening.png" class="image_match"/></div>                   
                   </a>
               </div>
           </div><!-- /.blog-post -->
@@ -89,8 +89,8 @@
 
           <nav>
             <ul class="pager">
-              <li><a href="visibility.html">Previous</a></li>
-              <li><a href="usercontrol.html">Next</a></li>
+              <li><a href="./visibility.html">Previous</a></li>
+              <li><a href="./usercontrol.html">Next</a></li>
             </ul>
           </nav>
 
@@ -101,16 +101,16 @@
           <div class="sidebar-module">
             <h4>Heuristics</h4>
             <ol class="list-unstyled">
-              <li><a href="visibility.html">Visibility of system status</a></li>
-              <li><a href="match.html">Match between system and world</a></li>
-              <li><a href="usercontrol.html">User control freedom</a></li>
-              <li><a href="consistency.html">Consistency and standards</a></li>
-              <li><a href="errorprevention.html">Error Prevention</a></li>
-              <li><a href="recognition.html">Recognition rather than recall</a></li>
-              <li><a href="flexibility.html">Flexibility and efficiency of use</a></li>
-              <li><a href="aesthetic.html">Aesthetic and minimalistic design</a></li>
-              <li><a href="errorrecovery.html">Error recovery</a></li>
-              <li><a href="help.html">Help and documentation</a></li>
+              <li><a href="./visibility.html">Visibility of system status</a></li>
+              <li><a href="./match.html">Match between system and world</a></li>
+              <li><a href="./usercontrol.html">User control freedom</a></li>
+              <li><a href="./consistency.html">Consistency and standards</a></li>
+              <li><a href="./errorprevention.html">Error Prevention</a></li>
+              <li><a href="./recognition.html">Recognition rather than recall</a></li>
+              <li><a href="./flexibility.html">Flexibility and efficiency of use</a></li>
+              <li><a href="./aesthetic.html">Aesthetic and minimalistic design</a></li>
+              <li><a href="./errorrecovery.html">Error recovery</a></li>
+              <li><a href="./help.html">Help and documentation</a></li>
             </ol>
           </div>
           
