--- a/visibility.html
+++ b/visibility.html
@@ -11,8 +11,8 @@
     <title>Usability Evaluation</title>
 
     <!-- Imports for shadowbox -->
-    <link rel="stylesheet" type="text/css" href="/shadowbox-3.0.3/shadowbox.css">
-    <script type="text/javascript" src="/shadowbox-3.0.3/shadowbox.js"></script>
+    <link rel="stylesheet" type="text/css" href="./shadowbox-3.0.3/shadowbox.css">
+    <script type="text/javascript" src="./shadowbox-3.0.3/shadowbox.js"></script>
     <script type="text/javascript">
     Shadowbox.init({
         handleOversize: "resize",
@@ -20,11 +20,11 @@
     });
     </script>
     <!-- CSS for visibility --> 
-    <link href="css/main_visibility.css" rel="stylesheet">
+    <link href="./css/main_visibility.css" rel="stylesheet">
       
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/support.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/support.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="blog.css" rel="stylesheet">
@@ -44,7 +44,7 @@
 <div class="navigation">
       <div class="container-fluid">
         <nav class="blog-nav">
-          <a class="blog-nav-item" href="index.html">Home</a>
+          <a class="blog-nav-item" href="./index.html">Home</a>
           <a class="blog-nav-item active" href="#">Heuristics</a>
           <a class="blog-nav-item" href="#">Contact</a>
           <a class="blog-nav-item" href="#">Closing</a>
@@ -70,8 +70,8 @@
                       <p>Navigation is pretty explicit on this website. On the main page, it is easily inferred that the user can navigate to four main sections: “Study with Us”, “Our Research”, “Business & Enterprise”, “Alumni & Supporters”.
                       </p>
                   </div>
-                  <a href="/screenshots/visibility_home_page.png" rel="shadowbox">
-                      <div class="col-sm-6" ><img src="screenshots/visibility_home_page.png" class="image_visibility"/></div>                   
+                  <a href="./screenshots/visibility_home_page.png" rel="shadowbox">
+                      <div class="col-sm-6" ><img src="./screenshots/visibility_home_page.png" class="image_visibility"/></div>                   
                   </a>
               </div>
               <hr>
@@ -80,8 +80,8 @@
                         <p>However, if the user wants to go to “Our Research”, they have to press the “Our Research” tab, and press “Our Research” again. This double click is unnecessary.
                         </p>
                     </div>
-                  <a href="/screenshots/visibility_double_our_research.png" rel="shadowbox">
-                      <div class="col-sm-6"><img src="screenshots/visibility_double_our_research.png" class="image_visibility"/></div>                   
+                  <a href="./screenshots/visibility_double_our_research.png" rel="shadowbox">
+                      <div class="col-sm-6"><img src="./screenshots/visibility_double_our_research.png" class="image_visibility"/></div>                   
                   </a>
               </div>
               <hr>
@@ -90,8 +90,8 @@
                         <p>It is fairly easy to see where we are by looking at the directory-like map. This allows the user to easily navigate back to the main page. However, the aesthetics of the navigation bar could greatly be improved.
                         </p>
                     </div>
-                  <a href="/screenshots/visibility_nav_bar.png" rel="shadowbox">
-                      <div class="col-sm-6"><img src="screenshots/visibility_nav_bar.png" class="image_visibility"/></div>                   
+                  <a href="./screenshots/visibility_nav_bar.png" rel="shadowbox">
+                      <div class="col-sm-6"><img src="./screenshots/visibility_nav_bar.png" class="image_visibility"/></div>                   
                   </a>
               </div>
           </div><!-- /.blog-post -->
@@ -99,8 +99,8 @@
 
           <nav>
             <ul class="pager">
-              <li><a href="index.html">Previous</a></li>
-              <li><a href="match.html">Next</a></li>
+              <li><a href="./index.html">Previous</a></li>
+              <li><a href="./match.html">Next</a></li>
             </ul>
           </nav>
 
@@ -111,16 +111,16 @@
           <div class="sidebar-module">
             <h4>Heuristics</h4>
             <ol class="list-unstyled">
-              <li><a href="visibility.html">Visibility of system status</a></li>
-              <li><a href="match.html">Match between system and world</a></li>
-              <li><a href="usercontrol.html">User control freedom</a></li>
-              <li><a href="consistency.html">Consistency and standards</a></li>
-              <li><a href="errorprevention.html">Error Prevention</a></li>
-              <li><a href="recognition.html">Recognition rather than recall</a></li>
-              <li><a href="flexibility.html">Flexibility and efficiency of use</a></li>
-              <li><a href="aesthetic.html">Aesthetic and minimalistic design</a></li>
-              <li><a href="errorrecovery.html">Error recovery</a></li>
-              <li><a href="help.html">Help and documentation</a></li>
+              <li><a href="./visibility.html">Visibility of system status</a></li>
+              <li><a href="./match.html">Match between system and world</a></li>
+              <li><a href="./usercontrol.html">User control freedom</a></li>
+              <li><a href="./consistency.html">Consistency and standards</a></li>
+              <li><a href="./errorprevention.html">Error Prevention</a></li>
+              <li><a href="./recognition.html">Recognition rather than recall</a></li>
+              <li><a href="./flexibility.html">Flexibility and efficiency of use</a></li>
+              <li><a href="./aesthetic.html">Aesthetic and minimalistic design</a></li>
+              <li><a href="./errorrecovery.html">Error recovery</a></li>
+              <li><a href="./help.html">Help and documentation</a></li>
             </ol>
           </div>
           
