--- a/usercontrol.html
+++ b/usercontrol.html
@@ -11,8 +11,8 @@
     <title>Usability Evaluation</title>
 
     <!-- Imports for shadowbox -->
-    <link rel="stylesheet" type="text/css" href="/shadowbox-3.0.3/shadowbox.css">
-    <script type="text/javascript" src="/shadowbox-3.0.3/shadowbox.js"></script>
+    <link rel="stylesheet" type="text/css" href="./shadowbox-3.0.3/shadowbox.css">
+    <script type="text/javascript" src="./shadowbox-3.0.3/shadowbox.js"></script>
     <script type="text/javascript">
     Shadowbox.init({
         handleOversize: "resize",
@@ -20,14 +20,14 @@
     });
     </script>
     <!-- CSS for usercontrol --> 
-    <link href="css/main_usercontrol.css" rel="stylesheet">
+    <link href="./css/main_usercontrol.css" rel="stylesheet">
       
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/support.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/support.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="blog.css" rel="stylesheet">
+    <link href="./blog.css" rel="stylesheet">
 
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
 
@@ -71,8 +71,8 @@
 The only time when there is “loading”, is when we go to the virtual tour. But it doesn t take more than a couple of seconds to get the tour going.
                       </p>
                   </div>
-                  <a href="/screenshots/usercontrol_virtual.png" rel="shadowbox">
-                      <div class="col-sm-6" ><img src="screenshots/usercontrol_virtual.png" class="image_usercontrol"/></div>                   
+                  <a href="./screenshots/usercontrol_virtual.png" rel="shadowbox">
+                      <div class="col-sm-6" ><img src="./screenshots/usercontrol_virtual.png" class="image_usercontrol"/></div>                   
                   </a>
               </div>
           </div><!-- /.blog-post -->
@@ -80,8 +80,8 @@ The only time when there is “loading”, is when we go to the virtual tour. Bu
 
           <nav>
             <ul class="pager">
-              <li><a href="match.html">Previous</a></li>
-              <li><a href="consistency.html">Next</a></li>
+              <li><a href="./match.html">Previous</a></li>
+              <li><a href="./consistency.html">Next</a></li>
             </ul>
           </nav>
 
@@ -92,16 +92,16 @@ The only time when there is “loading”, is when we go to the virtual tour. Bu
           <div class="sidebar-module">
             <h4>Heuristics</h4>
             <ol class="list-unstyled">
-              <li><a href="visibility.html">Visibility of system status</a></li>
-              <li><a href="match.html">Match between system and world</a></li>
-              <li><a href="usercontrol.html">User control freedom</a></li>
-              <li><a href="consistency.html">Consistency and standards</a></li>
-              <li><a href="errorprevention.html">Error Prevention</a></li>
-              <li><a href="recognition.html">Recognition rather than recall</a></li>
-              <li><a href="flexibility.html">Flexibility and efficiency of use</a></li>
-              <li><a href="aesthetic.html">Aesthetic and minimalistic design</a></li>
-              <li><a href="errorrecovery.html">Error recovery</a></li>
-              <li><a href="help.html">Help and documentation</a></li>
+              <li><a href="./visibility.html">Visibility of system status</a></li>
+              <li><a href="./match.html">Match between system and world</a></li>
+              <li><a href="./usercontrol.html">User control freedom</a></li>
+              <li><a href="./consistency.html">Consistency and standards</a></li>
+              <li><a href="./errorprevention.html">Error Prevention</a></li>
+              <li><a href="./recognition.html">Recognition rather than recall</a></li>
+              <li><a href="./flexibility.html">Flexibility and efficiency of use</a></li>
+              <li><a href="./aesthetic.html">Aesthetic and minimalistic design</a></li>
+              <li><a href="./errorrecovery.html">Error recovery</a></li>
+              <li><a href="./help.html">Help and documentation</a></li>
             </ol>
           </div>
           
