Simple Footer.. cut down nav bar.. added help, error recovery pages.

--- a/visibility.html
+++ b/visibility.html
@@ -46,8 +46,6 @@
         <nav class="blog-nav">
           <a class="blog-nav-item" href="index.html">Home</a>
           <a class="blog-nav-item active" href="#">Heuristics</a>
-          <a class="blog-nav-item" href="#">Contact</a>
-          <a class="blog-nav-item" href="#">Closing</a>
         </nav>
       </div>
     </div>
@@ -131,9 +129,8 @@
     </div><!-- /.container -->
 
     <div class="blog-footer">
-      <p>Blog template built for <a href="http://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
       <p>
-        <a href="#">Back to top</a>
+        Alfredo Rodriguez . Casey Graff . Pierre Karpov
       </p>
     </div>
 
