--- a/consistency.html
+++ b/consistency.html
@@ -45,10 +45,8 @@
 <div class="navigation">
       <div class="container-fluid">
         <nav class="blog-nav">
-          <a class="blog-nav-item active" href="#">Home</a>
-          <a class="blog-nav-item" href="#">Heuristics</a>
-          <a class="blog-nav-item" href="#">Contact</a>
-          <a class="blog-nav-item" href="#">Closing</a>
+          <a class="blog-nav-item" href="index.html">Home</a>
+          <a class="blog-nav-item active" href="#">Heuristics</a>
         </nav>
       </div>
     </div>
@@ -195,9 +193,8 @@
     </div><!-- /.container -->
 
     <div class="blog-footer">
-      <p>Blog template built for <a href="http://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
       <p>
-        <a href="#">Back to top</a>
+        Alfredo Rodriguez . Casey Graff . Pierre Karpov
       </p>
     </div>
 
