--- a/errorrecovery.html
+++ b/errorrecovery.html
@@ -10,6 +10,19 @@
 
     <title>Usability Evaluation</title>
 
+    <!-- Imports for shadowbox -->
+    <link rel="stylesheet" type="text/css" href="/shadowbox-3.0.3/shadowbox.css">
+    <script type="text/javascript" src="/shadowbox-3.0.3/shadowbox.js"></script>
+    <script type="text/javascript">
+    Shadowbox.init({
+        handleOversize: "resize",
+        modal: true
+    });
+    </script>
+
+    <!-- CSS for error recovery --> 
+    <link href="css/main_errorrecovery.css" rel="stylesheet">
+
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/support.css" rel="stylesheet">
@@ -32,10 +45,8 @@
 <div class="navigation">
       <div class="container-fluid">
         <nav class="blog-nav">
-          <a class="blog-nav-item active" href="#">Home</a>
-          <a class="blog-nav-item" href="#">Heuristics</a>
-          <a class="blog-nav-item" href="#">Contact</a>
-          <a class="blog-nav-item" href="#">Closing</a>
+          <a class="blog-nav-item" href="index.html">Home</a>
+          <a class="blog-nav-item active" href="#">Heuristics</a>
         </nav>
       </div>
     </div>
@@ -47,42 +58,33 @@
 
     <div class="header">
         <h1 class="htitle">Error Recovery</h1>
-        <p class="hdescription"> Usuability Evaluation of the University of Leicester website through Neilsen's 10 Heuristics</p>
+        <p class="hdescription">Error messages should precisely indicate the problem and suggest a solution. </p>
       </div>
 
         <div class="col-sm-8 blog-main">
 
-          <div class="blog-post">
-            <h2 class="blog-post-title">Sample blog post</h2>
-            <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
-
-            <p>This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
-            <hr>
-            <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
-            <blockquote>
-              <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            </blockquote>
-            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-            <h2>Heading</h2>
-            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-            <h3>Sub-heading</h3>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-            <pre><code>Example code block</code></pre>
-            <p>Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-            <h3>Sub-heading</h3>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <ul>
-              <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
-              <li>Donec id elit non mi porta gravida at eget metus.</li>
-              <li>Nulla vitae elit libero, a pharetra augue.</li>
-            </ul>
-            <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
-            <ol>
-              <li>Vestibulum id ligula porta felis euismod semper.</li>
-              <li>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</li>
-              <li>Maecenas sed diam eget risus varius blandit sit amet non magna.</li>
-            </ol>
-            <p>Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis.</p>
+         <div class="blog-post">
+              <div class="container-fluid">
+                  <div class="col-sm-6">
+                      <p>If the site receives an unidentified URL, it effectively guides the user to fix the error. The site contains plain language understandable to anyone who speaks English. Also, the site suggests some solutions about what the user might have typed in. It is helpful that this page keeps its consistency because the user can see how to go back home on the tabs. The color change to dark blue helps the user by letting them know something does not fit with the other pages.
+                      </p>
+                  </div>
+                  <a href="/screenshots/errorrec1.png" rel="shadowbox">
+                      <div class="col-sm-6" ><img src="screenshots/errorrec1.png" class="image_errorrecovery"/></div>                   
+                  </a>
+              </div>
+              <hr>
+              <div class="container-fluid">
+                    <div class="col-sm-6">
+                        <p>It is clear that there was an error because the system states it cannot find what the user searched for. The message is simple and understandable. However, the system does not provide a reason for the error or a way to fix it.
+                        </p>
+                    </div>
+                  <a href="/screenshots/errorrec2.png" rel="shadowbox">
+                      <div class="col-sm-6"><img src="screenshots/errorrec2.png" class="image_errorrecovery"/></div>                   
+                  </a>
+              </div>
+              <hr>
+              
           </div><!-- /.blog-post -->
 
 
@@ -120,9 +122,8 @@
     </div><!-- /.container -->
 
     <div class="blog-footer">
-      <p>Blog template built for <a href="http://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
       <p>
-        <a href="#">Back to top</a>
+        Alfredo Rodriguez . Casey Graff . Pierre Karpov
       </p>
     </div>
 
