--- a/help.html
+++ b/help.html
@@ -10,6 +10,19 @@
 
     <title>Usability Evaluation</title>
 
+    <!-- Imports for shadowbox -->
+    <link rel="stylesheet" type="text/css" href="/shadowbox-3.0.3/shadowbox.css">
+    <script type="text/javascript" src="/shadowbox-3.0.3/shadowbox.js"></script>
+    <script type="text/javascript">
+    Shadowbox.init({
+        handleOversize: "resize",
+        modal: true
+    });
+    </script>
+
+    <!-- CSS for error recovery --> 
+    <link href="css/main_help.css" rel="stylesheet">
+
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/support.css" rel="stylesheet">
@@ -32,10 +45,8 @@
 <div class="navigation">
       <div class="container-fluid">
         <nav class="blog-nav">
-          <a class="blog-nav-item active" href="#">Home</a>
-          <a class="blog-nav-item" href="#">Heuristics</a>
-          <a class="blog-nav-item" href="#">Contact</a>
-          <a class="blog-nav-item" href="#">Closing</a>
+          <a class="blog-nav-item " href="index.html">Home</a>
+          <a class="blog-nav-item active" href="#">Heuristics</a>
         </nav>
       </div>
     </div>
@@ -46,43 +57,34 @@
     <div class="row">
 
     <div class="header">
-        <h1 class="htitle">Help</h1>
+        <h1 class="htitle">Help & Documentation</h1>
         <p class="hdescription"> Usuability Evaluation of the University of Leicester website through Neilsen's 10 Heuristics</p>
       </div>
 
         <div class="col-sm-8 blog-main">
 
-          <div class="blog-post">
-            <h2 class="blog-post-title">Sample blog post</h2>
-            <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
-
-            <p>This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
-            <hr>
-            <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
-            <blockquote>
-              <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            </blockquote>
-            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-            <h2>Heading</h2>
-            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-            <h3>Sub-heading</h3>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-            <pre><code>Example code block</code></pre>
-            <p>Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-            <h3>Sub-heading</h3>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <ul>
-              <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
-              <li>Donec id elit non mi porta gravida at eget metus.</li>
-              <li>Nulla vitae elit libero, a pharetra augue.</li>
-            </ul>
-            <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
-            <ol>
-              <li>Vestibulum id ligula porta felis euismod semper.</li>
-              <li>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</li>
-              <li>Maecenas sed diam eget risus varius blandit sit amet non magna.</li>
-            </ol>
-            <p>Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis.</p>
+         <div class="blog-post">
+              <div class="container-fluid">
+                  <div class="col-sm-6">
+                      <p>The system does provide help on the bottom of the page. Its is effectively placed among other similar categories to help the users. These links lead to other pages that help categorize larger data sets. The contact information is right next to the help button which is useful if you have any other questions.  
+                      </p>
+                  </div>
+                  <a href="/screenshots/help1.png" rel="shadowbox">
+                      <div class="col-sm-6" ><img src="screenshots/help1.png" class="image_help"/></div>                   
+                  </a>
+              </div>
+              <hr>
+              <div class="container-fluid">
+                    <div class="col-sm-6">
+                        <p> There is a page that provides a lot of links depending on who is visiting the site. The links are a bit too clustered but the topic of each link is very helpful. The links are also helpful because they are categorized with the type of user. The colors and sizes of the fonts are helpful to tell which are links and headers. 
+                        </p>
+                    </div>
+                  <a href="/screenshots/help2.png" rel="shadowbox">
+                      <div class="col-sm-6"><img src="screenshots/help2.png" class="image_help"/></div>                   
+                  </a>
+              </div>
+              <hr>
+              
           </div><!-- /.blog-post -->
 
 
@@ -120,9 +122,8 @@
     </div><!-- /.container -->
 
     <div class="blog-footer">
-      <p>Blog template built for <a href="http://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
       <p>
-        <a href="#">Back to top</a>
+        Alfredo Rodriguez . Casey Graff . Pierre Karpov
       </p>
     </div>
 
