--- a/errorrecovery.html
+++ b/errorrecovery.html
@@ -69,8 +69,8 @@
                       <p>If the site receives an unidentified URL, it effectively guides the user to fix the error. The site contains plain language understandable to anyone who speaks English. Also, the site suggests some solutions about what the user might have typed in. It is helpful that this page keeps its consistency because the user can see how to go back home on the tabs. The color change to dark blue helps the user by letting them know something does not fit with the other pages.
                       </p>
                   </div>
-                  <a href="/screenshots/errorrec1.png" rel="shadowbox">
-                      <div class="col-sm-6" ><img src="screenshots/errorrec1.png" class="image_errorrecovery"/></div>                   
+                  <a href="./screenshots/errorrec1.png" rel="shadowbox">
+                      <div class="col-sm-6" ><img src="./screenshots/errorrec1.png" class="image_errorrecovery"/></div>                   
                   </a>
               </div>
               <hr>
@@ -79,8 +79,8 @@
                         <p>It is clear that there was an error because the system states it cannot find what the user searched for. The message is simple and understandable. However, the system does not provide a reason for the error or a way to fix it.
                         </p>
                     </div>
-                  <a href="/screenshots/errorrec2.png" rel="shadowbox">
-                      <div class="col-sm-6"><img src="screenshots/errorrec2.png" class="image_errorrecovery"/></div>                   
+                  <a href="./screenshots/errorrec2.png" rel="shadowbox">
+                      <div class="col-sm-6"><img src="./screenshots/errorrec2.png" class="image_errorrecovery"/></div>                   
                   </a>
               </div>
               <hr>
