added shadowbox to my pages

--- a/errorrecovery.html
+++ b/errorrecovery.html
@@ -11,8 +11,8 @@
     <title>Usability Evaluation</title>
 
     <!-- Imports for shadowbox -->
-    <link rel="stylesheet" type="text/css" href="/shadowbox-3.0.3/shadowbox.css">
-    <script type="text/javascript" src="/shadowbox-3.0.3/shadowbox.js"></script>
+    <link rel="stylesheet" type="text/css" href="./shadowbox-3.0.3/shadowbox.css">
+    <script type="text/javascript" src="./shadowbox-3.0.3/shadowbox.js"></script>
     <script type="text/javascript">
     Shadowbox.init({
         handleOversize: "resize",
