--- a/aesthetic.html
+++ b/aesthetic.html
@@ -10,6 +10,19 @@
 
     <title>Usability Evaluation</title>
 
+    <!-- Imports for shadowbox -->
+    <link rel="stylesheet" type="text/css" href="./shadowbox-3.0.3/shadowbox.css">
+    <script type="text/javascript" src="./shadowbox-3.0.3/shadowbox.js"></script>
+    <script type="text/javascript">
+    Shadowbox.init({
+        handleOversize: "resize",
+        modal: true
+    });
+    </script>
+
+    <!-- CSS for consistency --> 
+    <link href="./css/main_aesthetics.css" rel="stylesheet">
+
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/support.css" rel="stylesheet">
@@ -44,43 +57,46 @@
     <div class="row">
 
     <div class="header">
-        <h1 class="htitle">Usability Evaluation</h1>
-        <p class="hdescription"> Usuability Evaluation of the University of Leicester website through Neilsen's 10 Heuristics</p>
+        <h1 class="htitle">Aesthetics and Minimalist Design</h1>
+        <p class="hdescription">Information should be displayed in a way that is clean and concise.</p>
       </div>
 
         <div class="col-sm-8 blog-main">
 
           <div class="blog-post">
-            <h2 class="blog-post-title">Sample blog post</h2>
-            <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
-
-            <p>This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
-            <hr>
-            <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
-            <blockquote>
-              <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            </blockquote>
-            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-            <h2>Heading</h2>
-            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-            <h3>Sub-heading</h3>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-            <pre><code>Example code block</code></pre>
-            <p>Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-            <h3>Sub-heading</h3>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <ul>
-              <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
-              <li>Donec id elit non mi porta gravida at eget metus.</li>
-              <li>Nulla vitae elit libero, a pharetra augue.</li>
-            </ul>
-            <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
-            <ol>
-              <li>Vestibulum id ligula porta felis euismod semper.</li>
-              <li>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</li>
-              <li>Maecenas sed diam eget risus varius blandit sit amet non magna.</li>
-            </ol>
-            <p>Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis.</p>
+            <h3>The website lacks consistency in many categories</h3>
+              <hr>
+              <div class="container-fluid">
+                  <div class="row">
+                      <div class="col-sm-6">
+                          <p>The homepage feels very clean and minimalist (especially when compared to other university sites). It has a large image carousel with a few clear links on each of the carousel tabs. As you scroll down, the recent articles are displayed in a row that can be navigated through with right and left arrow buttons, which cue the user that there is additional information to display. Below that there are four common links each cleanly attached to a related image that take the user to a few of the most common sub-sites.
+                          </p>
+                          <p>By stripping out a lot of the extra links and text, they have made the homepage rather aesthetically appealing, but it did come at a cost. The removal of links means that the homepage does not always clearly direct the user to where he can find the information that he is looking for. This likely forces them to use the search functionality, which is not ideal. 
+                          </p>
+                      </div>
+                      <a href="./screenshots/aesthetics_homepage.png" rel="shadowbox" class="image_consistency_nav_container">
+                          <div class="col-sm-6"><img src="./screenshots/aesthetics_homepage.png" class="image_consistency"/></div>
+                      </a>
+                      <a href="./screenshots/aesthetics_scrollingcue.png" rel="shadowbox" class="image_consistency_nav_container">
+                          <div class="col-sm-6"><img src="./screenshots/aesthetics_scrollingcue.png" class="image_consistency"/></div>
+                      </a>
+                  </div>
+                  <hr>
+                  <div class="row">
+                      <div class="col-sm-6">
+                          <p>Once you progress into the level two and lower pages, the aesthetic feel of the homepage is lost. Most pages suffer from extreme overcrowding. There are often two horizontal navigation bars (one for general navigation and one for breadcrumbs), two side columns with links and one main column for content. Each one of these sections has a superfluous amount of text and hyper-links. This can make the page distracting for the user because his attention is pulled in many different directions, often away from the main content. 
+                          </p>
+                          <p>Even when the main content becomes the user’s sole focus, it can be a bit unclear. The use of in text images is nice, but can make the lines greatly misaligned from the title of the section or from the line of text immediately above the image. On the pages where there are fewer images, there is minimal white space, so the text dominates the page and is not quickly parsable. 
+                          </p>
+                      </div>
+                      <a href="./screenshots/aesthetics_toomuchtext.png" rel="shadowbox" class="image_consistency_nav_container">
+                          <div class="col-sm-6"><img src="./screenshots/aesthetics_toomuchtext.png" class="image_consistency"/></div>
+                      </a>
+                      <a href="./screenshots/aesthetics_cluttered.png" rel="shadowbox" class="image_consistency_nav_container">
+                          <div class="col-sm-6"><img src="./screenshots/aesthetics_cluttered.png" class="image_consistency"/></div>
+                      </a>
+                  </div>
+              </div>
           </div><!-- /.blog-post -->
 
 
