--- a/flexibility.html
+++ b/flexibility.html
@@ -9,7 +9,17 @@
     <link rel="icon" href="../../favicon.ico">
 
     <title>Usability Evaluation</title>
-
+    
+    <!-- Imports for shadowbox -->
+    <link rel="stylesheet" type="text/css" href="./shadowbox-3.0.3/shadowbox.css">
+    <script type="text/javascript" src="./shadowbox-3.0.3/shadowbox.js"></script>
+    <script type="text/javascript">
+    Shadowbox.init({
+        handleOversize: "resize",
+        modal: true
+    });
+    </script>
+    
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/support.css" rel="stylesheet">
